--- a/style1.css
+++ b/style1.css
@@ -400,7 +400,7 @@ background-color: #0084ff21;
   background-color: white;
 }
 .scrolled .menu {
-  animation: menu 0.3s ease forwards;
+  animation: menu 0.4s ease forwards;
   position: fixed;
   width: 100%;
   box-shadow: 0px 3px 10px #3b455324;
@@ -419,7 +419,7 @@ background-color: #0084ff21;
 @keyframes menu {
   from {
     box-shadow: 0px 0px 0px #3b455300;
-    margin-top: -50px;
+    margin-top: -150px;
     opacity: 0;
   }
   to {
@@ -2547,6 +2547,7 @@ user-select: all;
 }
 #downloadCounts div {
   user-select: none;
+  animation: eew 0.3s ease forwards;
   cursor: pointer;
   transition: ease 0.2s;
   position: relative;
@@ -3865,9 +3866,10 @@ body logo {
   left: 0;
   top: 0;
   overflow-y: auto;
-  width: 100%;
-  height: 100%;
+  width: -webkit-fill-available;
+  height: -webkit-fill-available;
   background: white;
+  padding: 10px;
 }
 .qr_on_close {
   width: 100%;
@@ -3982,6 +3984,7 @@ body logo {
 #barcode {
   margin: 20px auto;
   max-width: 100%;
+  user-select: text;
 }
 #menu-overlay {
   position: fixed;
