--- a/day-mode.css
+++ b/day-mode.css
@@ -122,7 +122,8 @@ body.night-mode .onlye-div {
 border-bottom: solid 2px #616368;
 }
 body.night-mode .indicator {
-background-color: #ffffff;
+box-shadow: 22px 0px 0px #34373e inset, -22px 0px 0px #34373e inset;
+background-color: #00a4ff;
 }
 
 body.night-mode .click_button{
@@ -491,7 +492,14 @@ body.night-mode .result-item img {
   filter: invert(1);
 }
 body.night-mode .result-item.selected {
+  box-shadow: 0px -1px 0px #ffffff12 inset, 4px 0px 0px #2a86f3 inset;
   background-color: #ffffff24;
+}
+body.night-mode .result-item.selected:hover {
+  background-color: #ffffff2b;
+}
+body.night-mode .result-item.selected:active {
+  box-shadow: 0px -0px 0px #ffffff12 inset, 4px 0px 0px #2a86f3 inset;
 }
 body.night-mode .image-container {
   border-color: #0000;
