--- a/style1.css
+++ b/style1.css
@@ -1064,6 +1064,7 @@ box-shadow: 0px -2px 0px #e9edef inset;
 .Everyone-button {
 overflow: hidden;
 cursor: pointer;
+user-select: none;
 /* border-radius: 4px; */
 padding: 0 14px;
 height: 37px;
@@ -1102,6 +1103,7 @@ margin-left: 4px;
 .Everyone-button:active i {
   transition: ease 0.1s;
   color: #298dff;
+  transform: rotateX(45deg);
   margin-top: 8px;
 }
 .Everyone-button:focus i {
@@ -3920,6 +3922,7 @@ body .zoom .ripple {
 
 .relload {
   position: fixed;
+  opacity: 0;
   top: 0;
   width: 100%;
   height: 3px;
@@ -4472,13 +4475,23 @@ body .eerr {
   position: absolute;
   bottom: 0;
   direction: rtl;
-  width: -webkit-fill-available;
+  width: max-content;
   font-size: 11px;
   opacity: 1;
-  padding-bottom: 4px;
-  text-align: -webkit-center;
+  text-align: left;
+  padding-left: 14px;
+  padding-bottom: 8px;
+  padding-top: 8px;
   color: rgb(255 255 255 / 85%);
-  z-index: 11;
+  z-index: 21;
+  text-shadow: 0px 1px 3px #00000052;
+}
+.cany:hover {
+  color: #819cbb;
+  text-decoration: underline;
+}
+.cany:active {
+  color: #99b9dd;
 }
 
 
