--- a/style1.css
+++ b/style1.css
@@ -2958,18 +2958,24 @@ tima:active {
   position: relative;
   cursor: pointer;
   width: 47px;
-  height: 44px;
+  height: max-content;
   text-align: -webkit-center;
   justify-content: center;
   border-radius: 10px;
-  box-shadow: 0px 1px 2px #0000002f;
+  margin-left: 4px;
+  margin-right: 4px;
+  margin-bottom: 4px;
 }
 .olclick_icon img {
-  height: 100%;
+  transition: ease 0.3s;
+  height: 44px;
   border-radius: 10px;
+  box-shadow: 0px 1px 2px #0000002f;
 }
-.olclick_icon img:active {
+.olclick_icon:active img {
+  transition: ease 0.1s;
   filter: brightness(0.9);
+  transform: scale(0.96);
 }
 .olclick_icon sw {
   position: absolute;
